fixed section spacing

--- a/components/Countdown.module.css
+++ b/components/Countdown.module.css
@@ -5,7 +5,7 @@
 }
 
 .container h2 {
-  margin-top: 3rem;
+  margin-top: 5rem;
   margin-bottom: 2.5rem;
 }
 
