--- a/components/Faq.module.css
+++ b/components/Faq.module.css
@@ -36,7 +36,7 @@
 .header {
     display: flex;
     justify-content: center;
-    margin-top: 1em;
+    margin-top: 3rem;
 }
 
 .header h2 {
