--- a/components/Trip.module.css
+++ b/components/Trip.module.css
@@ -1,7 +1,6 @@
 .container {
     display: flex;
     flex-direction: column;
-    margin-block: 4rem;
 }
 
 .leftContent {
@@ -46,6 +45,7 @@
 @media only screen and (min-width: 1024px) {
     .container {
         flex-direction: row;
+        margin-block: 3rem;
     }
 
     .leftContent {
